@@ -90,6 +90,7 @@ $(stamp)configure_%: $(stamp)mkbuilddir_%
 		--enable-obsolete-rpc \
 		--with-pkgversion="Debian EGLIBC $(DEB_VERSION)" \
 		--with-bugurl="http://www.debian.org/Bugs/" \
+		$(if $(filter $(pt_chown),yes),--enable-pt_chown) \
 		$(if $(filter $(threads),no),--disable-nscd) \
 		$(call xx,with_headers) $(call xx,extra_config_options))
 	touch $@
