@@ -2,14 +2,17 @@
 MIN_KERNEL_SUPPORTED := 2.6.32
 libc = libc6
 
+# Build and expect pt_chown on this platform
+pt_chown = yes
+
 # NPTL Config
 threads = yes
 libc_add-ons = nptl $(add-ons)
 
 ifeq ($(DEB_BUILD_PROFILE),bootstrap)
-  libc_extra_config_options = --enable-pt_chown $(extra_config_options)
+  libc_extra_config_options = $(extra_config_options)
 else
-  libc_extra_config_options = --enable-pt_chown --with-selinux $(extra_config_options)
+  libc_extra_config_options = --with-selinux $(extra_config_options)
 endif
 
 ifndef LINUX_SOURCE
