@@ -16,6 +16,9 @@ eglibc (2.18-0experimental1) UNRELEASED; urgency=low
     Adhemerval Zanella at IBM to fix gettimeofday vDSO/IFUNC interactions.
   * debian/patches/powerpc/submitted-gettimeofday-32.diff: Pull patch from
     Adhemerval Zanella at IBM to fix 32-bit gettimeofday VSYSCALL lookups.
+  * debian/rules.d/build.mk, debian/sysdeps/{hurd,linux,kfreebsd}.mk: Make
+    pt_chown keyed off a new variable that we can use to enable or disable
+    it per kernel type rather than just the primary libc (Closes: #734607)
 
   [ Aurelien Jarno ]
   * debian/patches/any/cvs-vfscanf-0e+0.diff: new patch from upstream to
